--- a/src/design-system/layout/sidebar.css
+++ b/src/design-system/layout/sidebar.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
 
-  height: 100%;
+  height: 95%;
   width: var(--sidebar-width-mobile);
   overflow-y: auto;
   scrollbar-width: thin;
